--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "expo": "~51.0.2",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
+    "metro": "^0.80.9",
+    "metro-config": "^0.80.9",
+    "metro-resolver": "^0.80.9",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-reanimated": "^3.10.1",
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^9.1.2",
+    "react-to-print": "^2.15.1",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
